--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,21 @@ body
     font-size: 16px;
 
 } 
+
+#cabecera
+{
+    background: #AAFF;
+    color: white;
+    margin: 0;
+    padding: 0.Sem ;
+}
+
+#cabecera #tagline
+{
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
